## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = dungeon_test

dungeon_test_SOURCES = \
	main.c \
	tunneler.h \
	tunneler.c \
	queue.c \
	queue.h

dungeon_test_LDFLAGS = 

dungeon_test_LDADD = 

