## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = dungeon_test

dungeon_test_SOURCES = \
	command.c \
	command.h \
	generate.c \
	generate.h \
	graphics.c \
	graphics.h \
	helper.c \
	helper.h \
	main.c \
	map.c \
	map.h \
	player.c \
	player.h \
	queue.c \
	queue.h \
	roomer.c \
	roomer.h \
	tunneler.c \
	tunneler.h \
	vision.c \
	vision.h \
	monster.c \
	monster.h

dungeon_test_LDFLAGS =  \
	-lSDL \
	-lSDL_image

